k8s/overlays/local/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: incertotech-local
  labels:
    name: incertotech-local
    environment: local
